--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,9 @@ services:
     entrypoint: ./entrypoint.sh
     depends_on:
       - db
+      - elasticsearch
+      - kibana
+
   db:
     image: mysql:5.7
     ports:
@@ -20,3 +23,23 @@ services:
     environment:
       MYSQL_DATABASE: 'db_django'
       MYSQL_ROOT_PASSWORD: 'password'
+
+  elasticsearch:
+    image: 'docker.elastic.co/elasticsearch/elasticsearch-oss:7.5.1'
+    environment:
+      ES_JAVA_OPTS: '${ES_JAVA_OPTS:--Xms512m -Xmx512m}'
+      discovery.type: 'single-node'
+    ports:
+      - 9210:9200
+    depends_on:
+      - db
+
+  kibana:
+#    mem_limit: 18874368000
+    image: docker.elastic.co/kibana/kibana-oss:7.5.1
+    environment:
+      ES_JAVA_OPTS: -Xmx1g -Xms1g
+    ports:
+      - 5603:5601
+    depends_on:
+      - elasticsearch
